Fix check-out feature and add APIs for admin to get attendance records detail.